# osgpyplusplus

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  setup.py
src/: CMakeLists.txt  setup.py.in
src/modules/: CMakeLists.txt  default.h  doxygen_doc_extractor.py  indexing_helpers.h  wrap_helpers.py  wrap_referenced.h
src/modules/greet/: CMakeLists.txt  greet.cpp  wrap_greet.py  wrap_module.py
src/modules/greet/generated_code/: exposed_decl.pypp.txt  greet.main.cpp  greet_free_functions.pypp.cpp  greet_free_functions.pypp.hpp
src/modules/osg/: CMakeLists.txt  wrap_module.py  wrap_osg.h
src/modules/osg/generated_code/: ActiveUniformMap.pypp.cpp  ActiveUniformMap.pypp.hpp  ActiveVarInfoMap.pypp.cpp  ActiveVarInfoMap.pypp.hpp  AlphaFunc.pypp.cpp  AlphaFunc.pypp.hpp~  AnimationPath.pypp.cpp  AnimationPath.pypp.hpp  AnimationPathCallback.pypp.cpp  AnimationPathCallback.pypp.hpp  ApplicationUsage.pypp.cpp  ApplicationUsage.pypp.hpp  ApplicationUsageProxy.pypp.cpp  ApplicationUsageProxy.pypp.hpp  ArgumentParser.pypp.cpp  ArgumentParser.pypp.hpp  Array.pypp.cpp  Array.pypp.hpp  ArrayDispatchers.pypp.cpp  ArrayDispatchers.pypp.hpp  ArrayList.pypp.cpp  ArrayList.pypp.hpp~  ArrayVisitor.pypp.cpp  ArrayVisitor.pypp.hpp  Atomic.pypp.cpp  Atomic.pypp.hpp~  AtomicCounterBufferBinding.pypp.cpp  AtomicCounterBufferBinding.pypp.hpp~  AtomicCounterBufferObject.pypp.cpp  AtomicCounterBufferObject.pypp.hpp~  AtomicPtr.pypp.cpp  AtomicPtr.pypp.hpp~  AttachmentMap.pypp.cpp  AttachmentMap.pypp.hpp~  AttributeDispatch.pypp.cpp  AttributeDispatch.pypp.hpp  AttributeVec.pypp.cpp  AttributeVec.pypp.hpp  AudioSink.pypp.cpp  AudioSink.pypp.hpp  (+792 more)
src/modules/osgAnimation/: CMakeLists.txt  wrap_module.py  wrap_osgAnimation.h
src/modules/osgAnimation/generated_code/: Action.pypp.cpp  Action.pypp.hpp  ActionAnimation.pypp.cpp  ActionAnimation.pypp.hpp  ActionBlendIn.pypp.cpp  ActionBlendIn.pypp.hpp  ActionBlendOut.pypp.cpp  ActionBlendOut.pypp.hpp  ActionLayers.pypp.cpp  ActionLayers.pypp.hpp  ActionStripAnimation.pypp.cpp  ActionStripAnimation.pypp.hpp  ActionVisitor.pypp.cpp  ActionVisitor.pypp.hpp  Animation.pypp.cpp  AnimationManagerBase.pypp.cpp  AnimationManagerBase.pypp.hpp  AnimationUpdateCallbackBase.pypp.cpp  AnimationUpdateCallbackBase.pypp.hpp  AnimationUpdateCallback_less__osg_scope_NodeCallback__greater_.pypp.cpp  AnimationUpdateCallback_less__osg_scope_NodeCallback__greater_.pypp.hpp  AnimationUpdateCallback_less__osg_scope_StateAttributeCallback__greater_.pypp.cpp  AnimationUpdateCallback_less__osg_scope_StateAttributeCallback__greater_.pypp.hpp  BasicAnimationManager.pypp.cpp  BasicAnimationManager.pypp.hpp  Bone.pypp.cpp  Bone.pypp.hpp  BoneMap.pypp.cpp  BoneMap.pypp.hpp  BoneMapVisitor.pypp.cpp  BoneMapVisitor.pypp.hpp  BoneWeightList.pypp.cpp  BoneWeightList.pypp.hpp  Channel.pypp.cpp  Channel.pypp.hpp  ClearActionVisitor.pypp.cpp  ClearActionVisitor.pypp.hpp  CompositeMotion.pypp.cpp  CompositeMotion.pypp.hpp  InBackFunction.pypp.cpp  (+155 more)
src/modules/osgDB/: CMakeLists.txt  wrap_module.py  wrap_osgDB.h
src/modules/osgDB/generated_code/: AuthenticationDetails.pypp.cpp  AuthenticationDetails.pypp.hpp~  AuthenticationMap.pypp.cpp  AuthenticationMap.pypp.hpp  BaseCompressor.pypp.cpp  BaseCompressor.pypp.hpp  BaseSerializer.pypp.cpp  BaseSerializer.pypp.hpp  Children.pypp.cpp  Children.pypp.hpp  CompressorMap.pypp.cpp  CompressorMap.pypp.hpp  DatabasePager.pypp.cpp  DatabasePager.pypp.hpp~  DotOsgWrapper.pypp.cpp  DotOsgWrapper.pypp.hpp  DynamicLibrary.pypp.cpp  DynamicLibrary.pypp.hpp  ExternalFileWriter.pypp.cpp  ExternalFileWriter.pypp.hpp  Field.pypp.cpp  Field.pypp.hpp  FieldReader.pypp.cpp  FieldReader.pypp.hpp  FieldReaderIterator.pypp.cpp  FieldReaderIterator.pypp.hpp  FileLocationCallback.pypp.cpp  FileLocationCallback.pypp.hpp~  FileNameComparator.pypp.cpp  FileNameComparator.pypp.hpp  FilePathList.pypp.cpp  FilePathList.pypp.hpp~  FindFileCallback.pypp.cpp  FindFileCallback.pypp.hpp~  FinishedObjectReadCallback.pypp.cpp  FinishedObjectReadCallback.pypp.hpp~  ImageOptions.pypp.cpp  ImageOptions.pypp.hpp  ImagePager.pypp.cpp  ImagePager.pypp.hpp  (+107 more)
src/modules/osgFX/: CMakeLists.txt  wrap_module.py  wrap_osgFX.h
src/modules/osgFX/generated_code/: AnisotropicLighting.pypp.cpp  AnisotropicLighting.pypp.hpp  BumpMapping.pypp.cpp  BumpMapping.pypp.hpp  Cartoon.pypp.cpp  Cartoon.pypp.hpp  Effect.pypp.cpp  Effect.pypp.hpp  EffectMap.pypp.cpp  EffectMap.pypp.hpp  MultiTextureControl.pypp.cpp  MultiTextureControl.pypp.hpp  Outline.pypp.cpp  Outline.pypp.hpp  Registry.pypp.cpp  Scribe.pypp.cpp  Scribe.pypp.hpp  SpecularHighlights.pypp.cpp  SpecularHighlights.pypp.hpp  Technique.pypp.cpp  Technique.pypp.hpp  Validator.pypp.cpp  Validator.pypp.hpp  _osgFX.main.cpp  _osgFX_free_functions.pypp.cpp  _osgFX_free_functions.pypp.hpp  _ref_ptr_less__osgFX_scope_Effect_const__greater___value_traits.pypp.hpp
src/modules/osgGA/: CMakeLists.txt  wrap_module.py  wrap_osgGA.h
src/modules/osgGA/generated_code/: AnimationPathManipulator.pypp.cpp  AnimationPathManipulator.pypp.hpp~  CameraManipulator.pypp.cpp  CameraManipulator.pypp.hpp  Device.pypp.cpp  (+59 more)
src/modules/osgManipulator/: CMakeLists.txt  wrap_module.py  wrap_osgManipulator.h
src/modules/osgParticle/: CMakeLists.txt  wrap_module.py  wrap_osgParticle.h
src/modules/osgSim/: CMakeLists.txt  wrap_module.py  wrap_osgSim.h
src/modules/osgText/: CMakeLists.txt  wrap_module.py  wrap_osgText.h
src/modules/osgUtil/: CMakeLists.txt  wrap_module.py  wrap_osgUtil.h
src/modules/osgViewer/: CMakeLists.txt  wrap_module.py  wrap_osgViewer.h
src/modules/osgVolume/: CMakeLists.txt  wrap_module.py  wrap_osgVolume.h
src/modules/osgWidget/: CMakeLists.txt  wrap_module.py  wrap_osgWidget.h
src/osgpyplusplus/: __init__.py
src/osgpypp/: __init__.py.in  osg.py  osgAnimation.py  osgDB.py  osgFX.py  osgGA.py  osgManipulator.py  osgParticle.py  osgSim.py  osgText.py  osgUtil.py  osgViewer.py  osgVolume.py  osgWidget.py
src/practice/: CMakeLists.txt  greet.cpp  greet.h  greet_wrap.cpp  wrap_greet.py
src/practice/generated_code/: greet_wrapped.cpp
(+922 files in other folders)
